--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
  
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
-           id="org.devgirl.calendar"
+           id="fr.nconcepts.echo"
       version="0.1.0">
     <name>Echo</name>
     <description>Sample PhoneGap Echo Plugin</description>
