--- a/plugin.xml
+++ b/plugin.xml
@@ -17,7 +17,7 @@
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="Echo">
-                <param name="android-package" value="fr.nconcepts.plugins.Echo"/>
+                <param name="android-package" value="fr.nconcepts.echo"/>
             </feature>
         </config-file>
  
